3825.	[bug]		Address sign extension bug in isc_regex_validate.
			[RT #35758]

3824.	[bug]		A collision between two flag values could cause
			problems with cache cleaning when SIT was enabled.
			[RT #35858]

3823.	[func]		Log the rpz cname target when rewriting. [RT #35667]

3822.	[bug]		Log the correct type of static-stub zones when
			removing them. [RT #35842]

3821.	[contrib]	Added a new "mysqldyn" DLZ module with dynamic
			update and transaction support. Thanks to Marty
			Lee for the contribution. [RT #35656]

3820.	[func]		The DLZ API doesn't pass the database version to
			the lookup() function; this can cause DLZ modules
			that allow dynamic updates to mishandle prerequisite
			checks. This has been corrected by adding a
			'dbversion' field to the dns_clientinfo_t
			structure. [RT #35656]

3819.	[bug]		NSEC3 hashes need to be able to be entered and
			displayed without padding.  This is not a issue for
			currently defined algorithms but may be for future
			hash algorithms. [RT #27925]

3818.	[bug]		Stop lying to the optimizer that 'void *arg' is a
			constant in isc_event_allocate.

3817.	[func]		The "delve" command is now spelled "delv" to avoid
			a namespace collision with the Xapian project.
			[RT #35801]

3816.	[func]		"dig +qr" now reports query size. (Thanks to
			Tony Finch.) [RT #35822]

3815.	[doc]		Clarify "nsupdate -y" usage in man page. [RT #35808]

3814.	[func]		The "masterfile-style" zone option controls the
			formatting of dumped zone files. Options are
			"relative" (multiline format) and "full" (one
			record per line). The default is "relative".
			[RT #20798]

3813.	[func]		"host" now recognizes the "timeout", "attempts" and
			"debug" options when set in /etc/resolv.conf.
			(Thanks to Adam Tkac at RedHat.) [RT #21885]

3812.	[func]		Dig now supports sending arbitary EDNS options from
			the command line (+ednsopt=code[:value]). [RT #35584]

3811.	[func]		"serial-update-method date;" sets serial number